# Osodio

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GUIDE.md  Makefile  Plan.md  README.md  cmake_install.cmake  main.cpp
include/osodio/: app.hpp  cancel.hpp  defer.hpp  di.hpp  errors.hpp  group.hpp  handler_traits.hpp  jwt.hpp  metrics.hpp  middleware.hpp  multipart.hpp  openapi.hpp  osodio.hpp  request.hpp  response.hpp  router.hpp  schema.hpp  sse.hpp  task.hpp  testing.hpp  types.hpp  validation.hpp  websocket.hpp
include/osodio/core/: event_loop.hpp  io_uring_loop.hpp
src/: app.cpp  router.cpp
src/core/: event_loop.cpp  event_loop.hpp  io_uring_loop.cpp  tcp_server.cpp  tcp_server.hpp
src/http/: http2_connection.cpp  http2_connection.hpp  http_connection.cpp  http_connection.hpp  http_parser.cpp  http_parser.hpp
templates/: hello.html  index.html
tests/: validation_test.cpp
